<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flickr Photos</string>
    
    <string name="action_settings">Settings</string>
    
    <string name="action_share">Share</string>
    
    <string name="action_reload">Reload</string>
    
    <string name="action_recent_queries">Recent queries</string>
    
    <string name="recent_queries_title">Recent queries</string>
    
    <string name="single_photo_activity_title">Photo details</string>
    
    <string name="load_failed">Load failed: %1$s</string>
    
    <string name="content_description_big_photo">Big photo</string>
    
    <string name="loading_image">Loading image&#8230;</string>
    
    <string name="loading_description">Loading description&#8230;</string>
    
    <string name="photo_display_name_missing">Photo from flickr</string>
    
    <string name="photo_display_name_truncated">%1$s&#8230;</string>
    
    <string name="no_recent_queries">No recent queries</string>
        
    <string name="photo_info_summary"><![CDATA[
        Title: <b>%1$s</b><br/>
        Description: <b>%2$s</b><br/>
        Owner: <b>%3$s</b><br/>
        Latitude: <b>%4$s</b><br/>
        Longitude: <b>%5$s</b><br/>
        Locality: <b>%6$s</b><br/>
        County: <b>%7$s</b><br/>
        Region: <b>%8$s</b><br/>
        Country: <b>%9$s</b><br/>
        Tags: <b>%10$s</b>
    ]]></string>
        
    <string name="clear_recent_searches">Clear recent</string>
        
    <string name="close">Close</string>
        
    <string name="search_hint">Search in title, description, tags</string>
    
    <string name="next_page_button">Next &gt;&gt;</string>
    
    <string name="prev_page_button">&lt;&lt; Previous</string>
        
    <string name="button_reload">Load again!</string>
        
    <string name="page_info">Page %1$d of %2$d</string>
        
    <string name="empty_result">Empty result</string>
        
    <string name="loading_query">Loading page %1$d&#8230;</string>
        
    
</resources>
